# DeFoG

./: .gitignore  ASLURMX.md  CLAUDE.md  REPORT.md  USAGE.md  aqsoldb.csv  aqsoldb_backup.csv  environment.yaml  filter_aqsoldb.py  noxfile.py  pyproject.toml  requirements.txt  run_adapter_compose_2d_jupiter.sh  run_adapter_fp_zinc_jupiter.sh  run_adapter_rl_eta_sweep_jupiter.sh  run_adapter_rl_head_jupiter.sh  run_adapter_rl_lrfix_seeds_jupiter.sh  run_adapter_rl_ratchet_seed42_jupiter.sh  run_adapter_rl_round2_seeds_jupiter.sh  run_adapter_rl_round3_seed42_jupiter.sh  run_adapter_rl_zinc_jupiter.sh  run_adapter_train_zinc_jupiter.sh  run_cfg_fp_zinc_jupiter.sh  run_chembl_ddp_chain_jupiter.sh  run_chembl_ddp_smoke_jupiter.sh  run_chembl_eval_jupiter.sh  run_chembl_foundation_chain_jupiter.sh  run_chembl_gdpo_smoke_jupiter.sh  run_chembl_gdpo_sweep_jupiter.sh  run_chembl_sweep_jupiter.sh  run_chembl_uncond_lr_sweep_jupiter.sh  run_fk_fingerprint_kcist.sh  run_fp_guidance_zinc_kcist.sh  run_guacamol_uncond_kcist.sh  run_interior_adapters_jupiter.sh  run_interior_rl_jupiter.sh  run_selfconsistency_clogp_jupiter.sh  run_union_ddp_chain_jupiter.sh  run_zinc_cond_kcist.sh  run_zinc_lr_sweep_kcist.sh  (+2 more)
configs/: config.yaml
data/: aqsoldb_conditional.csv  test_molecules.csv
docs/: ADAPTER_PLAN.md  CHEMBL_FOUNDATION_MODEL.md  RL_FINETUNING.md  exact_guidance_design.md  gdpo_design.md
examples/: core_usage.py
experiments/: adapter_compose_2d__zinc.py  adapter_fingerprint__zinc.py  adapter_rl_finetune__zinc.py  adapter_rl_finetune_fp__zinc.py  adapter_selfconsistency__zinc.py  adapter_training__zinc.py  backfill_smiles_kcist.py  cfg_fingerprint__zinc.py  conditional_generation.py  conditional_training__aqsoldb.py  conditional_training__zinc.py  conditional_training__zinc_det.py  eval_aqsoldb.py  eval_uncond_aqsoldb.py  fingerprint_guidance__zinc.py  fk_fingerprint_steer__zinc.py  fk_steer__aqsoldb.py  fk_sweep_aggregate.py  gdpo_connectivity.py  gdpo_connectivity__aqsoldb.py  gdpo_sanity.py  guided_generation__aqsoldb.py  guided_logp_demo.py  guided_logp_final.py  guided_logp_smc.py  guided_logp_smc_final.py  guided_logp_smc_restart.py  guided_logp_sweep.py  inpaint_ab_aqsoldb.py  inpaint_grid_aqsoldb.py  inpaint_logp__aqsoldb.py  (+33 more)
src/: main.py  (+3 more)
(+64 files in other folders)
