[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defog"
version = "1.0.0"
description = "DeFoG: Discrete Flow Matching for Graph Generation"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Yiming Qin" },
    { name = "Manuel Madeira" },
]
requires-python = ">=3.9"
keywords = ["graph generation", "flow matching", "diffusion", "deep learning", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML framework
    "torch>=2.0",
    "torch_geometric>=2.3",
    "pytorch_lightning>=2.0",

    # Scientific computing
    "numpy>=1.23",
    "scipy>=1.10",
    "networkx>=2.8",

    # Utilities
    "tqdm>=4.60",
    "torchmetrics>=0.11",

    # Visualization & logging
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "wandb>=0.15",
    "imageio>=2.31",

    # Data handling
    "pandas>=1.4",

    # Chemistry
    "rdkit>=2023.3",

    # Experiment management
    "pycomex>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "nox>=2024.3",
]
hydra = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.urls]
Homepage = "https://github.com/qym7/DeFoG"
Documentation = "https://github.com/qym7/DeFoG"
Repository = "https://github.com/qym7/DeFoG"

[tool.hatch.build.targets.wheel]
packages = ["defog"]

[tool.hatch.build.targets.sdist]
include = ["defog/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hatch
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
